# load_cell

./: .gitignore  Cargo.toml  avr-atmega328p.json  build.rs
.cargo/: config.toml
arduino_script/: Cargo.toml
arduino_script/.cargo/: config.toml
arduino_script/src/: main.rs
src/: main.rs
windows_interface/: Cargo.toml  build.rs
windows_interface/.cargo/: config.toml
windows_interface/resources/: dialog.rc  resource.h  resources.rc  resources.res
windows_interface/src/: app.rs  ids.rs  main.rs  ui.rs
windows_interface/src/dlg/: custom_dlg.rs  events.rs  mod.rs  ui.rs
windows_interface/src/logger/: events.rs  mod.rs  ui.rs
windows_interface/src/reader/: events.rs  funcs.rs  mod.rs  ui.rs
windows_interface/src/wnd_main/: events.rs  funcs.rs  ids.rs  mod.rs  ui.rs
windows_interface/src/wnd_modal/: events.rs  mod.rs  ui.rs
