[package]
name = "arduino_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
nb = "1.0.0"
ufmt = "0.2.0"
hx711_spi = "0.4.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
features = ["arduino-uno"]