[package]
name = "windows_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.2.0"

[profile.release]
opt-level = 2